--- a/results/CLEAR-CACHE-ON-DECLASSIFICATION/NO-LEAK.tex
+++ b/results/CLEAR-CACHE-ON-DECLASSIFICATION/NO-LEAK.tex
@@ -3,19 +3,19 @@
     & & \minrv{0} & \minrv{1} & \minrv{2} & \minrv{3} & \minrv{p} & \minrv{0c} & \minrv{0p} & \minrv{1c} & \minrv{1p} \\
     \hline
     
-     & \minrv{r} & \PT & \CT & \PT & \PT & \multirow{2}{*}{\minrv{M}} & \multirow{2}{*}{\minrv{UN}}  & \multirow{2}{*}{\minrv{L--}} & \multirow{2}{*}{\minrv{WB}} & \multirow{2}{*}{\minrv{--W}} \\ & \minrv{m} & \PT & \PT & \PU & \PU &&&&& \\
+     & \minrv{r} & \PT & \CT & \PT & \PT & \multirow{2}{*}{\minrv{M}} & \multirow{2}{*}{\minrv{WB}}  & \multirow{2}{*}{\minrv{---}} & \multirow{2}{*}{\minrv{UN}} & \multirow{2}{*}{\minrv{--W}} \\ & \minrv{m} & \PT & \PT & \PU & \PU &&&&& \\
     \hline
     
-    \multirow{2}{*}{\minrv{Csrrs 1, 1, 3}} & \minrv{r} &  & \PT &  &  &  &   &  &  & \multirow{2}{*}{\minrv{-RW}} \\ & \minrv{m} &  &  &  &  &&&&& \\
+    \multirow{2}{*}{\minrv{Csrrs 1, 1, 3}} & \minrv{r} &  & \PT &  &  &  &   & \multirow{2}{*}{\minrv{-RW}} &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
     \hline
     
     \multirow{2}{*}{\minrv{Mret}} & \minrv{r} &  &  &  &  & \multirow{2}{*}{\minrv{U}} &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
     \hline
     
-    \multirow{2}{*}{\minrv{Load 3, 0}} & \minrv{r} &  &  &  & \CU &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
+    \multirow{2}{*}{\minrv{Load 1, 0}} & \minrv{r} &  & \CT &  &  &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
     \hline
     
-    \multirow{2}{*}{\minrv{Mov 0, 0}} & \minrv{r} &  &  &  &  &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
+     & \minrv{r} &  &  &  &  &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
     \hline
     
 \end{tabular}
