--- a/results/NO-PUBLIC-READS/MEMORY-OP-INTEGRITY.tex
+++ b/results/NO-PUBLIC-READS/MEMORY-OP-INTEGRITY.tex
@@ -3,16 +3,16 @@
     & & \minrv{0} & \minrv{1} & \minrv{2} & \minrv{3} & \minrv{p} & \minrv{0c} & \minrv{0p} & \minrv{1c} & \minrv{1p} \\
     \hline
     
-     & \minrv{r} & \PT & \PT & \PT & \CT & \multirow{2}{*}{\minrv{M}} & \multirow{2}{*}{\minrv{UN}}  & \multirow{2}{*}{\minrv{--W}} & \multirow{2}{*}{\minrv{UN}} & \multirow{2}{*}{\minrv{---}} \\ & \minrv{m} & \PU & \PU & \PT & \PT &&&&& \\
+     & \minrv{r} & \CT & \PT & \PT & \PT & \multirow{2}{*}{\minrv{M}} & \multirow{2}{*}{\minrv{UN}}  & \multirow{2}{*}{\minrv{--W}} & \multirow{2}{*}{\minrv{UN}} & \multirow{2}{*}{\minrv{---}} \\ & \minrv{m} & \CU & \PU & \PT & \PT &&&&& \\
     \hline
     
-    \multirow{2}{*}{\minrv{Load 0, 3}} & \minrv{r} & \PU &  &  &  &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
+    \multirow{2}{*}{\minrv{Load 3, 3}} & \minrv{r} &  &  &  & \CU &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
     \hline
     
-    \multirow{2}{*}{\minrv{Load 3, 0}} & \minrv{r} &  &  &  & \PU &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
+    \multirow{2}{*}{\minrv{Store 3, 3}} & \minrv{r} &  &  &  &  &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
     \hline
     
-    \multirow{2}{*}{\minrv{Loadi 3 IMM}} & \minrv{r} &  &  &  & \CT &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
+    \multirow{2}{*}{\minrv{Sra 0, 0, 1}} & \minrv{r} &  &  &  &  &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
     \hline
     
 \end{tabular}
