--- a/results/SANITIZE-ON-CLASSIFICATION/MEMORY-OP-INTEGRITY.tex
+++ b/results/SANITIZE-ON-CLASSIFICATION/MEMORY-OP-INTEGRITY.tex
@@ -3,19 +3,19 @@
     & & \minrv{0} & \minrv{1} & \minrv{2} & \minrv{3} & \minrv{p} & \minrv{0c} & \minrv{0p} & \minrv{1c} & \minrv{1p} \\
     \hline
     
-     & \minrv{r} & \PT & \CT & \PT & \PT & \multirow{2}{*}{\minrv{M}} & \multirow{2}{*}{\minrv{WB}}  & \multirow{2}{*}{\minrv{--W}} & \multirow{2}{*}{\minrv{UN}} & \multirow{2}{*}{\minrv{--W}} \\ & \minrv{m} & \PU & \PU & \PU & \PU &&&&& \\
+     & \minrv{r} & \PT & \PT & \PT & \CT & \multirow{2}{*}{\minrv{M}} & \multirow{2}{*}{\minrv{UN}}  & \multirow{2}{*}{\minrv{-RW}} & \multirow{2}{*}{\minrv{UN}} & \multirow{2}{*}{\minrv{--W}} \\ & \minrv{m} & \PU & \PU & \PU & \PU &&&&& \\
     \hline
     
-    \multirow{2}{*}{\minrv{Csrrc 1, 1, 0}} & \minrv{r} &  & \PT &  &  &  &   & \multirow{2}{*}{\minrv{---}} &  & \multirow{2}{*}{\minrv{---}} \\ & \minrv{m} &  &  &  &  &&&&& \\
+    \multirow{2}{*}{\minrv{Csrrc 3, 3, 0}} & \minrv{r} &  &  &  & \PT &  &   &  &  & \multirow{2}{*}{\minrv{---}} \\ & \minrv{m} &  &  &  &  &&&&& \\
     \hline
     
     \multirow{2}{*}{\minrv{Load 2, 0}} & \minrv{r} &  &  & \PU &  &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
     \hline
     
-    \multirow{2}{*}{\minrv{Store 2, 3}} & \minrv{r} &  &  &  &  &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
+    \multirow{2}{*}{\minrv{Load 0, 2}} & \minrv{r} & \PU &  &  &  &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
     \hline
     
-    \multirow{2}{*}{\minrv{Ecall}} & \minrv{r} &  &  &  &  &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
+    \multirow{2}{*}{\minrv{Store 2, 0}} & \minrv{r} &  &  &  &  &  &   &  &  &  \\ & \minrv{m} &  &  &  &  &&&&& \\
     \hline
     
 \end{tabular}
