--- a/thesis/sections/results.tex
+++ b/thesis/sections/results.tex
@@ -604,12 +604,14 @@ Here, the vulnerability is triggered by an external interrupt which goes along w
         \centering
         \input{../results/SP-ENABLE/MEMORY-OP-INTEGRITY.tex}
         \caption{\smv{MEMORY_OP_INTEGRITY} (\ref{itm:prop-mem-i})}
+        \label{tbl:cex-mem-i-sysret}
     \end{subtable}
 
     \begin{subtable}{\textwidth}
         \centering
         \input{../results/SP-ENABLE/CSR-INTEGRITY.tex}
         \caption{\smv{CSR_INTEGRITY} (\ref{itm:prop-csr-i})}
+        \label{tbl:cex-csr-i-sysret}
     \end{subtable}
     \caption{Counter-examples for the SYSRET vulnerability}
     \label{tbl:cex-sysret}
